# power-quant-analyst

./: LICENSE  README.md  pyproject.toml
data/: PRICE_AND_DEMAND_202401_QLD1.csv  PRICE_AND_DEMAND_202402_QLD1.csv  PRICE_AND_DEMAND_202403_QLD1.csv  PRICE_AND_DEMAND_202404_QLD1.csv  PRICE_AND_DEMAND_202405_QLD1.csv  PRICE_AND_DEMAND_202406_QLD1.csv  PRICE_AND_DEMAND_202407_QLD1.csv  PRICE_AND_DEMAND_202408_QLD1.csv  PRICE_AND_DEMAND_202409_QLD1.csv
src/: flexible_dispatch_demo.ipynb
